query 10 and 11 implemented on UI